--- a/app-server/app/config/config.cfg
+++ b/app-server/app/config/config.cfg
@@ -2,5 +2,5 @@ DATABASE_URL = 'localhost'
 DATABASE_USER = 'planespotter'
 DATABASE_PWD = 'VMware1!'
 DATABASE = 'planespotter'
-REDIS_HOST = '10.114.209.218'
+REDIS_HOST = 'redis-server.redis'
 REDIS_PORT = '6379'
