--- a/kubernetes/adsb-sync-oc-deployment.yaml
+++ b/kubernetes/adsb-sync-oc-deployment.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
-kind: Project
+kind: Namespace
 metadata:
    name: adsb-sync
+   annotations:
+     ncp/no_snat: "true"
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
@@ -41,7 +43,7 @@ metadata:
 data:
   config.ini: |
     [main]
-    redis_server = 10.114.209.211
+    redis_server = redis-server.redis
     adsb_server_poll_url = https://public-api.adsbexchange.com/VirtualRadar/AircraftList.json
     adsb_poll_filter = ?fRegS=N
     adsb_type = poll
